improved shipment route
added shipment wth multple products
