# swagger-output.json
@@ -176,22 +176,22 @@
             "schema": {
               "type": "object",
               "properties": {
-                "productid": {
+                "products": {
                   "example": "any"
                 },
-                "productname": {
-                  "example": "any"
-                },
-                "productdescription": {
-                  "example": "any"
-                },
-                "quantityreceived": {
-                  "example": "any"
-                },
-                "cost": {
+                "invoicenumber": {
                   "example": "any"
                 },
                 "datereceived": {
+                  "example": "any"
+                },
+                "suppliername": {
+                  "example": "any"
+                },
+                "shipmentdescription": {
+                  "example": "any"
+                },
+                "totalreceived": {
                   "example": "any"
                 },
                 "totalcost": {
@@ -205,13 +205,16 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/stock/productshipments": {
+    "/stock/productshipments/{productid}": {
       "get": {
         "tags": [
           "Shipments"
@@ -220,13 +223,17 @@
         "parameters": [
           {
             "name": "productid",
-            "in": "query",
+            "in": "path",
+            "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -274,20 +281,6 @@
             "description": ""
           }
         }
-      },
-      "get": {
-        "tags": [
-          "Order"
-        ],
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
       }
     },
     "/order/addorder": {
@@ -325,6 +318,33 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/order/getorder/{orderid}": {
+      "get": {
+        "tags": [
+          "Order"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "orderid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
